# folly

folly/: AtomicUnorderedMap.h  Baton.h  CMakeLists.txt  Singleton.h  Uri.h  conanfile.py  libfolly.pc
folly/docs/: Synchronized.md  ThreadLocal.md
folly/io/async/: AsyncServerSocket.cpp  AsyncServerSocket.h  AsyncTransport.h  EventHandler.h  HHWheelTimer.h
